# pi-pico-mp

./: .gitignore  .gitmodules  Cargo.toml  Embed.toml  build.rs  rust-toolchain.toml
.cargo/: config.toml
src/: buttons.rs  delay.rs  display.rs  heater.rs  main.rs  rtd.rs  ui.rs
src/ui/: home.slint  lv_drv_conf.h
src_old/: main.rs  main.rs.bak  metrology.rs  ui.rs
src_old/metrology/: pt100.cfg  pt_100.rs
src_old/ui/: button.rs  display.rs
