[package]
name = "pi-pico-mp"
version = "0.1.0"
authors = ["Florian Beck <info@florian-beck.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.1.3"
embedded-hal ="0.2.5"
embedded-time = "0.12.0"
panic-reset = "0.1.0"
panic-halt= "0.2.0"
rp2040-boot2 = "0.2.0"
rp2040-hal = { version="0.6.1", features=["rt"] } # Unresolved issues with code in 0.7.0
embedded-graphics = "0.7.1"
display-interface-spi = "0.4.1"
mipidsi = "0.6.0"
fugit = "0.3.6"
# libm = "0.2.6"
# st7789 = "0.7.0"
# critical-section = "1.1.1"

# Dependencies for debug probe
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256