[package]
name = "pi-pico-mp"
version = "0.1.0"
authors = ["Florian Beck <info@florian-beck.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.1.3"
embedded-hal ="0.2.5"
embedded-time = "0.12.0"
panic-reset = "0.1.0"
panic-halt= "0.2.0"
rp2040-boot2 = "0.2.0"
rp2040-hal = { version="0.6.1", features=["rt"] } # Unresolved issues with code in 0.7.0
rp-pico = "0.6.0"
fugit = "0.3.6"

# Dependencies for debug probe
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# IO dependencies
# usb-device = "0.2.9"
# usbd-serial = "0.1.1"

# Dependencies for graphics/display
embedded-graphics = "0.7.1"
display-interface-spi = "0.4.1"
mipidsi = "0.6.0"
format_no_std = "1.0.0"
# libm = "0.2.6"

# Dependencies for ADC
# nau7802 = "0.1.0-alpha"
nau7802 = {path = "lib/nau7802"}

# Dependencies for heater
pid-ctrl = "0.1.4"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256