[package]
name = "pi-pico-mp"
description = "Melting Point Detector based on Raspberry Pi Pico/RP2040"
authors = ["Florian Beck <info@florian-beck.de>"]
repository = "https://github.com/thecodechemist99/pi-pico-mp"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.0"
edition = "2021"
build = "build.rs"
resolver = "2"

[dependencies]
# Core dependencies
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.1.3"
embedded-hal ="0.2.5"
embedded-time = "0.12.0"
panic-reset = "0.1.0"
panic-halt= "0.2.0"
rp2040-boot2 = "0.2.0"
rp2040-hal = { version = "0.8.0", features = ["rt"] }
rp-pico = "0.7.0"
fugit = "0.3.6"

# Dependencies for debug probe
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# IO dependencies
# usb-device = "0.2.9"
# usbd-serial = "0.1.1"

# Dependencies for graphics/display
embedded-graphics = "0.7.1"
display-interface-spi = "0.4.1"
mipidsi = "0.6.0"
format_no_std = "1.0.0"
profont = "0.6.1"
# lvgl = "0.5.2"
# lvgl = { git = "https://github.com/rafaelcaricio/lvgl-rs", branch = "master" }
# lvgl = { path = "lib/lvgl-rs/lvgl" }
# lvgl = { git = "https://github.com/thecodechemist99/lvgl-rs", dir = "tree/master/lvgl", branch = "master" }


# Dependencies for ADC
nau7802 = { git = "https://github.com/amiraeva/nau7802-rs", rev = "8346513" }
libm = "0.2.6"

# Dependencies for heater
pt-rtd = "0.1.1"
pid = "4.0.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true

[profile.dev]
codegen-units = 256
debug = 2
debug-assertions = true
overflow-checks = true
panic = 'unwind'
lto = false
opt-level = 0
incremental = true